<resources>
    <string name="app_name">VProperty</string>
    <string name="login">LOGIN</string>
    <string name="loading">Loading...</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="enter_email">Please enter email</string>
    <string name="enter_password">Please enter password</string>
    <string name="enter_confirm_password">Please confirm your password</string>
    <string name="passwords_dont_match">Passwords Don\'t match</string>
    <string name="enter_valid_email">Please enter valid email address</string>
    <string name="dont_you_have_account_register_now">Don\'t you have account? Register now</string>
    <string name="google_login">Sign in with google</string>
    <string name="auth_succeeded">Authentication succeeded.</string>
    <string name="google_succeeded">Google login succeeded</string>
    <string name="google_failed">Google login failed</string>
    <string name="auth_failed">Authentication failed.</string>
    <string name="biometric_unrecognized">Biometric is valid but not recognized.</string>
    <string name="biometric_recognized">Biometric is valid and recognized.</string>
    <string name="biometric_failed">Unrecoverable error has been encountered.</string>
    <string name="fingerprint">Fingerprint</string>
    <string name="fingerprint_login">Login with the sensor</string>
    <string name="cancel">Cancel</string>
    <string name="register">REGISTER</string>
    <string name="register_new_account">Register new account</string>
    <string name="connection_failed">Connection lost</string>
    <string name="registration_success">Registration successful</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="resend_link">SEND RESET LINK</string>
    <string name="reset_successful">You have been sent an email with instructions to reset your password.</string>
    <string name="forgot_password_ques"><u>Forgot Password? Reset here.</u></string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="map">Map</string>
    <string name="menu_gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="default_drawer">Default</string>
    <string name="custom">Custom</string>
    <string name="navigation_drawer">Navigation Drawer</string>
    <string name="capture_photo">Capture photo...</string>
    <string name="failed_upload">Failed to upload image</string>
    <string name="error_adding_property">Error adding property</string>
    <string name="success_property">Successfully added property</string>
    <string name="display_name">Display Name</string>
    <string name="enter_display_name">Enter a display name</string>
    <string name="add_property">Add House</string>
    <string name="add_picture">Add a picture</string>
    <string name="add">ADD</string>
    <string name="android_key">AIzaSyCM0zqYl3iFx4yjhmdfUCuUOkYGPxn-EQ4</string>
    <string name="map_key">AIzaSyCM0zqYl3iFx4yjhmdfUCuUOkYGPxn-EQ4</string>
    <string name="title_activity_maps">Map</string>
    <string name="action_geolocate">Pick Place</string>
    <string name="default_info_title">Default Location</string>
    <string name="leku_title_activity_location_picker">Location Picker</string>
    <string name="leku_load_location_error">Something went wrong. Please try again.</string>
    <string name="leku_no_search_results">There are no results for your search</string>
    <string name="leku_unknown_location">unknown location</string>
    <string name="leku_voice_search_promp">Search by voice…</string>
    <string name="leku_voice_search_extra_language">en-EN</string>
    <string name="leku_toolbar_action_voice_title">Voice</string>
    <string name="leku_search_hint">Search</string>
    <string name="leku_app_name" translatable="false">Leku Demo</string>
    <string name="google_maps_key">AIzaSyCM0zqYl3iFx4yjhmdfUCuUOkYGPxn</string>
    <string name="launch_map_picker" translatable="false">LAUNCH MAP LOCATION PICKER ACTIVITY</string>
    <string name="launch_map_picker_with_pois" translatable="false">LAUNCH MAP WITH POIS</string>
    <string name="launch_map_picker_with_style" translatable="false">LAUNCH MAP WITH STYLE</string>
    <string name="leku_lib_version" translatable="false">version 6.3.0</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="open_location">Open Place Picker</string>
    <string name="property_name">House Name</string>
    <string name="address">Address</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="zipcode">Zip Code</string>
    <string name="description_address">Description Address</string>
    <string name="description">Description</string>
    <string name="default_notification_channel_id">vproperty</string>
    <string name="vproperty_channel">vproperty</string>
    <string name="fcm_message">vproperty</string>
    <string name="msg_subscribed">Subscribed to vproperty topic</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
    <string name="default_notification_channel_name" translatable="true">vproperty</string>
    <string name="msg_subscribe_failed">Failed to subscribe to vproperty topic</string>
    <string name="prev">Previous</string>
    <string name="go">Next</string>
    <string name="finish">Finish</string>
    <string-array name="hometype">
        <item>@string/all</item>
        <item>@string/single_family</item>
        <item>@string/condo</item>
        <item>@string/town_house</item>
        <item>@string/multi_family</item>
        <item>@string/apartment</item>
        <item>@string/mobile_manufactured</item>
        <item>@string/coop_unit</item>
        <item>@string/vacant_land</item>
        <item>@string/other</item>
    </string-array>
    <string name="homefacts">Home Facts</string>
    <string name="roomdetails">Room Details</string>
    <string name="buildingdetails">Building Details</string>
    <string name="utilitydetails">Utility Details</string>
    <string name="additional_information">Additional information</string>
    <string name="single_family">Single Family</string>
    <string name="condo">Condo</string>
    <string name="town_house">Town House</string>
    <string name="multi_family">Multi Family</string>
    <string name="apartment">Apartment</string>
    <string name="mobile_manufactured">Mobile/Manufactured</string>
    <string name="coop_unit">Coop Unit</string>
    <string name="vacant_land">Vacant Land</string>
    <string name="other">Other</string>
    <string name="choose_home_type">Please choose a home type</string>
    <string name="choose_house_name">Enter a house name please</string>
    <string name="enter_home_address">Enter Home Address</string>
    <string name="enter_zip_code">Enter Zip Code</string>
    <string name="enter_longitude">Please Enter Longitude</string>
    <string name="enter_latitude">Please Enter Latitude</string>
    <string name="enter_required_fields">Please Enter required fields</string>
    <string name="price">Price</string>
    <string name="price_per_month">Price per month</string>
    <string name="hoa_dues">HOA Dues</string>
    <string name="enter_price">Please enter price</string>
    <string name="roboto_regular">sans-serif</string>
    <string name="roboto_light">sans-serif-light</string>
    <string name="roboto_condensed">sans-serif-condensed</string>
    <string name="roboto_thin">sans-serif-thin</string>
    <string name="roboto_medium">sans-serif-medium</string>
    <string name="number_picker_formatter">%02d</string>
    <string name="number_of_bedrooms">No of Bedrooms</string>
    <string name="number_of_bathrooms">No of Bathrooms</string>
    <string name="total_rooms">Total Rooms</string>
    <string name="number_of_parking_spaces">Parking Spaces</string>
    <string name="forrent">for rent</string>
    <string name="salerent">Sale/Rent</string>
    <string name="forsale">for sale</string>
    <string name="for_rent">Rent</string>
    <string name="for_sale">Sale</string>
    <string name="year_built">Year built</string>
    <string name="modal_year">Structural Modal Year</string>
    <string name="floor_number">Floor Number</string>
    <string name="finished_square_feet">Finished Sq FT</string>
    <string name="lot_size">Lot size Sq FT</string>
    <string name="basement_sq_ft">Basement Sq ft</string>
    <string name="garage_ft">Garage sq. ft</string>
    <string name="choose_sale_rent">Please choose whether the property is for sale or rent</string>
    <string name="appliances">APPLIANCES</string>
    <string name="dishwasher">DishWasher</string>
    <string name="dryer">Dryer</string>
    <string name="freezer">Freezer</string>
    <string name="garbage_disposal">Disposal</string>
    <string name="microwave">Microwave</string>
    <string name="range_oven">Range/Oven</string>
    <string name="refrigerator">Refrigerator</string>
    <string name="washer">Washer</string>
    <string name="trash_compactor">Trash Compactor</string>
    <string name="floor_covering">FLOOR COVERING</string>
    <string name="carpet">Carpet</string>
    <string name="concrete">Concrete</string>
    <string name="hardwood">Hardwood</string>
    <string name="laminate">Laminate</string>
    <string name="tile">Tile</string>
    <string name="softwood">Softwood</string>
    <string name="slate">Slate</string>
    <string name="linoleum">linoleum/Vinyl</string>
    <string name="rooms">ROOM</string>
    <string name="breakfast">Breakfast</string>
    <string name="dinning">Dinning</string>
    <string name="family">Family</string>
    <string name="laundry">Laundry</string>
    <string name="library">Library</string>
    <string name="master_bath">Master Bath</string>
    <string name="mud">Mud</string>
    <string name="office">Office</string>
    <string name="pantry">Pantry</string>
    <string name="recreation">Recreation</string>
    <string name="workshop">Workshop</string>
    <string name="solarium">Solarium</string>
    <string name="sun">Sun</string>
    <string name="walk_in_closet">Walk in Closet</string>
    <string name="exterior">EXTERIOR</string>
    <string name="brick">Brick</string>
    <string name="cement">Cement/Concrete</string>
    <string name="balcony_patio">Balcony/Patio</string>
    <string name="barbecue_area">Barbecue Area</string>
    <string name="deck">Deck</string>
    <string name="dock">Dock</string>
    <string name="fenced_yard">Fenced yard</string>
    <string name="garden">Garden</string>
    <string name="greenhouse">GreenHouse</string>
    <string name="hottubspa">Hot tub/spa</string>
    <string name="lawn">Lawn</string>
    <string name="pond">Pond</string>
    <string name="pool">Pool</string>
    <string name="porch">Porch</string>
    <string name="rv_parking">RV Parking</string>
    <string name="sauna">Sauna</string>
    <string name="sprinkler_system">Sprinkler System</string>
    <string name="waterfront">Waterfront</string>
    <string name="my_profile">My Profile</string>
    <string name="my_properties">My Properties</string>
    <string name="by_list">By List</string>
    <string name="filter">Filter</string>
    <string name="play_game">Gencyber Card Game</string>
    <string name="virtual_agent">Virtual Agent</string>
    <string name="statistics">Statistics</string>
</resources>