<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_address"
            android:title="@string/map" />
        <item
            android:id="@+id/nav_list"
            android:icon="@drawable/ic_view_list_black_24dp"
            android:title="@string/by_list" />
        <item
            android:id="@+id/nav_filter"
            android:icon="@drawable/ic_filter_filled_tool_symbol"
            android:title="@string/filter" />
        <item
            android:id="@+id/nav_properties"
            android:icon="@drawable/ic_home"
            android:title="@string/my_properties" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_user"
            android:title="@string/my_profile" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/action_settings" />
        <item
            android:id="@+id/nav_game"
            android:icon="@drawable/ic_games_black_24dp"
            android:title="@string/play_game" />
        <item
            android:id="@+id/nav_chatbot"
            android:icon="@drawable/ic_chat_black_24dp"
            android:title="@string/virtual_agent" />
        <item
            android:id="@+id/nav_statistics"
            android:icon="@drawable/ic_analytics"
            android:title="@string/statistics" />
    </group>
</menu>
