<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="edu.newhaven.krikorherlopian.android.vproperty.fragment.PropertyFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/content_main" />

    <fragment
        android:id="@+id/nav_list"
        android:name="edu.newhaven.krikorherlopian.android.vproperty.fragment.ViewPagerPropertiesFragment"
        android:label="@string/by_list"
        tools:layout="@layout/content_main" />

    <fragment
        android:id="@+id/nav_properties"
        android:name="edu.newhaven.krikorherlopian.android.vproperty.fragment.MyPropertiesFragment"
        android:label="@string/my_properties"
        tools:layout="@layout/content_main" />

    <fragment
        android:id="@+id/nav_filter"
        android:name="edu.newhaven.krikorherlopian.android.vproperty.fragment.FilterFragment"
        android:label="@string/filter"
        tools:layout="@layout/content_main" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="edu.newhaven.krikorherlopian.android.vproperty.fragment.ProfileFragment"
        android:label="@string/my_profile"
        tools:layout="@layout/content_main" />


    <fragment
        android:id="@+id/nav_settings"
        android:name="edu.newhaven.krikorherlopian.android.vproperty.fragment.SettingsFragment"
        android:label="@string/action_settings"
        tools:layout="@layout/content_main" />

</navigation>