<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="10dp"
    android:paddingEnd="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <edu.newhaven.krikorherlopian.android.vproperty.checkbox.MyCustomCheckBox
            android:id="@+id/balcony_patio"
            android:layout_width="0dp"
            android:layout_height="@dimen/checkboxsize"
            android:layout_weight="1"
            android:text="@string/balcony_patio"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"></edu.newhaven.krikorherlopian.android.vproperty.checkbox.MyCustomCheckBox>

        <edu.newhaven.krikorherlopian.android.vproperty.checkbox.MyCustomCheckBox
            android:id="@+id/lawn"
            android:layout_width="0dp"
            android:layout_height="@dimen/checkboxsize"
            android:layout_weight="1"
            android:text="@string/lawn"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"></edu.newhaven.krikorherlopian.android.vproperty.checkbox.MyCustomCheckBox>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <edu.newhaven.krikorherlopian.android.vproperty.checkbox.MyCustomCheckBox
            android:id="@+id/barbecue_area"
            android:layout_width="0dp"
            android:layout_height="@dimen/checkboxsize"
            android:layout_weight="1"
            android:text="@string/barbecue_area"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"></edu.newhaven.krikorherlopian.android.vproperty.checkbox.MyCustomCheckBox>

        <edu.newhaven.krikorherlopian.android.vproperty.checkbox.MyCustomCheckBox
            android:id="@+id/pond"
            android:layout_width="0dp"
            android:layout_height="@dimen/checkboxsize"
            android:layout_weight="1"
            android:text="@string/pond"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"></edu.newhaven.krikorherlopian.android.vproperty.checkbox.MyCustomCheckBox>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <edu.newhaven.krikorherlopian.android.vproperty.checkbox.MyCustomCheckBox
            android:id="@+id/deck"
            android:layout_width="0dp"
            android:layout_height="@dimen/checkboxsize"
            android:layout_weight="1"
            android:text="@string/deck"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"></edu.newhaven.krikorherlopian.android.vproperty.checkbox.MyCustomCheckBox>

        <edu.newhaven.krikorherlopian.android.vproperty.checkbox.MyCustomCheckBox
            android:id="@+id/pool"
            android:layout_width="0dp"
            android:layout_height="@dimen/checkboxsize"
            android:layout_weight="1"
            android:text="@string/pool"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"></edu.newhaven.krikorherlopian.android.vproperty.checkbox.MyCustomCheckBox>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <edu.newhaven.krikorherlopian.android.vproperty.checkbox.MyCustomCheckBox
            android:id="@+id/dock"
            android:layout_width="0dp"
            android:layout_height="@dimen/checkboxsize"
            android:layout_weight="1"
            android:text="@string/dock"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"></edu.newhaven.krikorherlopian.android.vproperty.checkbox.MyCustomCheckBox>

        <edu.newhaven.krikorherlopian.android.vproperty.checkbox.MyCustomCheckBox
            android:id="@+id/porch"
            android:layout_width="0dp"
            android:layout_height="@dimen/checkboxsize"
            android:layout_weight="1"
            android:text="@string/porch"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"></edu.newhaven.krikorherlopian.android.vproperty.checkbox.MyCustomCheckBox>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <edu.newhaven.krikorherlopian.android.vproperty.checkbox.MyCustomCheckBox
            android:id="@+id/fenced_yard"
            android:layout_width="0dp"
            android:layout_height="@dimen/checkboxsize"
            android:layout_weight="1"
            android:text="@string/fenced_yard"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"></edu.newhaven.krikorherlopian.android.vproperty.checkbox.MyCustomCheckBox>

        <edu.newhaven.krikorherlopian.android.vproperty.checkbox.MyCustomCheckBox
            android:id="@+id/rv_parking"
            android:layout_width="0dp"
            android:layout_height="@dimen/checkboxsize"
            android:layout_weight="1"
            android:text="@string/rv_parking"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"></edu.newhaven.krikorherlopian.android.vproperty.checkbox.MyCustomCheckBox>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <edu.newhaven.krikorherlopian.android.vproperty.checkbox.MyCustomCheckBox
            android:id="@+id/garden"
            android:layout_width="0dp"
            android:layout_height="@dimen/checkboxsize"
            android:layout_weight="1"
            android:text="@string/garden"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"></edu.newhaven.krikorherlopian.android.vproperty.checkbox.MyCustomCheckBox>

        <edu.newhaven.krikorherlopian.android.vproperty.checkbox.MyCustomCheckBox
            android:id="@+id/sauna"
            android:layout_width="0dp"
            android:layout_height="@dimen/checkboxsize"
            android:layout_weight="1"
            android:text="@string/sauna"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"></edu.newhaven.krikorherlopian.android.vproperty.checkbox.MyCustomCheckBox>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <edu.newhaven.krikorherlopian.android.vproperty.checkbox.MyCustomCheckBox
            android:id="@+id/greenhouse"
            android:layout_width="0dp"
            android:layout_height="@dimen/checkboxsize"
            android:layout_weight="1"
            android:text="@string/greenhouse"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"></edu.newhaven.krikorherlopian.android.vproperty.checkbox.MyCustomCheckBox>

        <edu.newhaven.krikorherlopian.android.vproperty.checkbox.MyCustomCheckBox
            android:id="@+id/sprinkler_system"
            android:layout_width="0dp"
            android:layout_height="@dimen/checkboxsize"
            android:layout_weight="1"
            android:text="@string/sprinkler_system"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"></edu.newhaven.krikorherlopian.android.vproperty.checkbox.MyCustomCheckBox>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <edu.newhaven.krikorherlopian.android.vproperty.checkbox.MyCustomCheckBox
            android:id="@+id/hottubspa"
            android:layout_width="0dp"
            android:layout_height="@dimen/checkboxsize"
            android:layout_weight="1"
            android:text="@string/hottubspa"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"></edu.newhaven.krikorherlopian.android.vproperty.checkbox.MyCustomCheckBox>

        <edu.newhaven.krikorherlopian.android.vproperty.checkbox.MyCustomCheckBox
            android:id="@+id/waterfront"
            android:layout_width="0dp"
            android:layout_height="@dimen/checkboxsize"
            android:layout_weight="1"
            android:text="@string/waterfront"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"></edu.newhaven.krikorherlopian.android.vproperty.checkbox.MyCustomCheckBox>
    </LinearLayout>

</LinearLayout>