<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="10dp"
    android:paddingEnd="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <edu.newhaven.krikorherlopian.android.vproperty.checkbox.MyCustomCheckBox
            android:id="@+id/breakfast"
            android:layout_width="0dp"
            android:layout_height="@dimen/checkboxsize"
            android:layout_weight="1"
            android:text="@string/breakfast"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"></edu.newhaven.krikorherlopian.android.vproperty.checkbox.MyCustomCheckBox>

        <edu.newhaven.krikorherlopian.android.vproperty.checkbox.MyCustomCheckBox
            android:id="@+id/dinning"
            android:layout_width="0dp"
            android:layout_height="@dimen/checkboxsize"
            android:layout_weight="1"
            android:text="@string/dinning"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"></edu.newhaven.krikorherlopian.android.vproperty.checkbox.MyCustomCheckBox>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <edu.newhaven.krikorherlopian.android.vproperty.checkbox.MyCustomCheckBox
            android:id="@+id/family"
            android:layout_width="0dp"
            android:layout_height="@dimen/checkboxsize"
            android:layout_weight="1"
            android:text="@string/family"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"></edu.newhaven.krikorherlopian.android.vproperty.checkbox.MyCustomCheckBox>

        <edu.newhaven.krikorherlopian.android.vproperty.checkbox.MyCustomCheckBox
            android:id="@+id/laundry"
            android:layout_width="0dp"
            android:layout_height="@dimen/checkboxsize"
            android:layout_weight="1"
            android:text="@string/laundry"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"></edu.newhaven.krikorherlopian.android.vproperty.checkbox.MyCustomCheckBox>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <edu.newhaven.krikorherlopian.android.vproperty.checkbox.MyCustomCheckBox
            android:id="@+id/library"
            android:layout_width="0dp"
            android:layout_height="@dimen/checkboxsize"
            android:layout_weight="1"
            android:text="@string/library"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"></edu.newhaven.krikorherlopian.android.vproperty.checkbox.MyCustomCheckBox>

        <edu.newhaven.krikorherlopian.android.vproperty.checkbox.MyCustomCheckBox
            android:id="@+id/master_bath"
            android:layout_width="0dp"
            android:layout_height="@dimen/checkboxsize"
            android:layout_weight="1"
            android:text="@string/master_bath"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"></edu.newhaven.krikorherlopian.android.vproperty.checkbox.MyCustomCheckBox>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <edu.newhaven.krikorherlopian.android.vproperty.checkbox.MyCustomCheckBox
            android:id="@+id/mud"
            android:layout_width="0dp"
            android:layout_height="@dimen/checkboxsize"
            android:layout_weight="1"
            android:text="@string/mud"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"></edu.newhaven.krikorherlopian.android.vproperty.checkbox.MyCustomCheckBox>

        <edu.newhaven.krikorherlopian.android.vproperty.checkbox.MyCustomCheckBox
            android:id="@+id/office"
            android:layout_width="0dp"
            android:layout_height="@dimen/checkboxsize"
            android:layout_weight="1"
            android:text="@string/office"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"></edu.newhaven.krikorherlopian.android.vproperty.checkbox.MyCustomCheckBox>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <edu.newhaven.krikorherlopian.android.vproperty.checkbox.MyCustomCheckBox
            android:id="@+id/pantry"
            android:layout_width="0dp"
            android:layout_height="@dimen/checkboxsize"
            android:layout_weight="1"
            android:text="@string/pantry"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"></edu.newhaven.krikorherlopian.android.vproperty.checkbox.MyCustomCheckBox>

        <edu.newhaven.krikorherlopian.android.vproperty.checkbox.MyCustomCheckBox
            android:id="@+id/recreation"
            android:layout_width="0dp"
            android:layout_height="@dimen/checkboxsize"
            android:layout_weight="1"
            android:text="@string/recreation"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"></edu.newhaven.krikorherlopian.android.vproperty.checkbox.MyCustomCheckBox>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <edu.newhaven.krikorherlopian.android.vproperty.checkbox.MyCustomCheckBox
            android:id="@+id/workshop"
            android:layout_width="0dp"
            android:layout_height="@dimen/checkboxsize"
            android:layout_weight="1"
            android:text="@string/workshop"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"></edu.newhaven.krikorherlopian.android.vproperty.checkbox.MyCustomCheckBox>

        <edu.newhaven.krikorherlopian.android.vproperty.checkbox.MyCustomCheckBox
            android:id="@+id/solarium"
            android:layout_width="0dp"
            android:layout_height="@dimen/checkboxsize"
            android:layout_weight="1"
            android:text="@string/solarium"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"></edu.newhaven.krikorherlopian.android.vproperty.checkbox.MyCustomCheckBox>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <edu.newhaven.krikorherlopian.android.vproperty.checkbox.MyCustomCheckBox
            android:id="@+id/sun"
            android:layout_width="0dp"
            android:layout_height="@dimen/checkboxsize"
            android:layout_weight="1"
            android:text="@string/sun"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"></edu.newhaven.krikorherlopian.android.vproperty.checkbox.MyCustomCheckBox>

        <edu.newhaven.krikorherlopian.android.vproperty.checkbox.MyCustomCheckBox
            android:id="@+id/walk_in_closet"
            android:layout_width="0dp"
            android:layout_height="@dimen/checkboxsize"
            android:layout_weight="1"
            android:text="@string/walk_in_closet"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"></edu.newhaven.krikorherlopian.android.vproperty.checkbox.MyCustomCheckBox>
    </LinearLayout>
</LinearLayout>